--- a/templates/contacts/contact_history.haml
+++ b/templates/contacts/contact_history.haml
@@ -144,11 +144,11 @@
       -elif event.type == 'msg_created' or event.type == 'msg_received' or event.type == "ivr_created"
         .activity-message
           .activity-body
-            -if obj.visibility == 'D'
-              %i
+            -if event.visibility == 'D'
+              .italic.opacity-50
                 -trans "Message deleted by user"
-            -elif obj.visibility == 'X'
-              %i
+            -elif event.visibility == 'X'
+              .italic.opacity-50
                 -trans "Message deleted by sender"
             -else
               -if event.msg.text
