--- a/templates/contacts/contact_read.haml
+++ b/templates/contacts/contact_read.haml
@@ -37,7 +37,7 @@
         %temba-icon(name="archive")
         -trans "Archived"
 
-    -if user.is_beta and contact.current_flow
+    -if contact.current_flow
       .lbl-group.linked.inverted.bg-tertiary.mr-2.mb-2(onclick="goto(event)" href="{% url 'flows.flow_editor' contact.current_flow.uuid %}")
         %temba-icon(name="flow")
         {{ contact.current_flow.name }}
