Fix: back button history behavior (#272)
* fix: get iframe window before call history back

* send message to parent telling to go back

* control history manually

* ignore back request if not enough history

* separate history for config and flows, also disconsider reloads to be in history

* remove todos

* add newline

--- a/templates/weni/side.haml
+++ b/templates/weni/side.haml
@@ -2,10 +2,8 @@
 
 #unnnic-menu
 
-  %div{href:"#", class:"button-secondary-small-icon-on-left", onclick:'goBack()'}
-    .icon.unnnic-keyboard-arrow-left-1.unnnic-icon-xs
-    .title
-      -trans "Back"
+  %div{href:"#", class:"button-secondary-small-icon-on-left"}
+    -include "./weni_navigation_control.haml"
     .unnnic-tooltip
         -trans "Back"
 
@@ -121,8 +119,4 @@
       $("#unnnic-content").toggleClass("reduced")
       $("#unnnic-menu").toggleClass("reduced")
       $("#unnnic-shrink-button").toggleClass("reduced")
-    }
-
-    function goBack() {
-      window.history.back();
     }
