--- a/templates/channels/types/instagram/claim.haml
+++ b/templates/channels/types/instagram/claim.haml
@@ -108,7 +108,7 @@
             getFBPages(response.authResponse.accessToken);
           }
         }, 
-        {scope: 'instagram_basic,instagram_manage_messages,pages_manage_metadata,pages_show_list'});
+        {scope: 'instagram_basic,instagram_manage_messages,pages_manage_metadata,pages_show_list,pages_read_engagement'});
 
       })
     });
