--- a/templates/includes/nav.haml
+++ b/templates/includes/nav.haml
@@ -7,7 +7,8 @@
       #menu {
         display: flex;
         flex-direction: row;
-        align-items: flex-end;
+        align-items: flex-start;
+        margin-right: 10px;
         margin-top:-80px;
         min-height:81px;
         padding-bottom:15px;
@@ -54,9 +55,12 @@
             width: 15px;
             margin-left: 0px;
             margin-right: 30px;
-            margin-top:-60px;
             font-size: 36px;
             color: var(--color-nav-unselected);
+          }
+          .submenu-container {
+            top: 35px;
+            left: -20px;
           }
         }
       
