--- a/templates/500.html
+++ b/templates/500.html
@@ -46,7 +46,7 @@
 <body>
 
 <div class="logo">
-<img src="/sitestatic{{ brand.logo }}"/>
+<img src="{{STATIC_URL}}{{ brand.logo }}"/>
 </div>
 <div style="text-align: center;">
 <h3>
