--- a/templates/frame.haml
+++ b/templates/frame.haml
@@ -20,8 +20,12 @@
 
       :javascript
 
+        window.STATIC_URL = "{{STATIC_URL}}";
         function loadNewInterface(force) {
+          console.log("loading new interface, force", force);
           var newUrl = mapUrl(window.location.pathname);
+
+          console.log(newUrl);
           if (newUrl != window.location.pathname) {
             window.location = newUrl;
           } else { 
@@ -46,6 +50,7 @@
         :javascript
           (function(){
             var nav = getCookie("nav");
+            console.log("Auto route", nav);
             if (nav == "2") {
               loadNewInterface(false);
             }
