--- a/templates/includes/pagination.haml
+++ b/templates/includes/pagination.haml
@@ -1,5 +1,5 @@
 -if paginator.count
-  .flex.flex-wrap.mx-4.mt-3
+  .flex.flex-wrap.mx-4
     .text-gray-700
       -include "includes/results_count.html"
     .flex-grow
