--- a/templates/spa.haml
+++ b/templates/spa.haml
@@ -28,7 +28,6 @@
 
 -block page-header
   -with gear_links=view.get_gear_links
-
     -if gear_links
       -if title
         .spa-title.rounded.bg-gray-600.mb-5.shadow
@@ -36,19 +35,20 @@
             .text-white.flex-grow.px-5.py-2.title-text.flex.flex-col.text-container
               .text-2xl
                 {{title}}
-
             -if gear_links
               .spa-page-menu
                 -include "spa_page_menu.haml"
     -else
       -if title
         .spa-title.no-menu.flex.items-center.mb-3
-          .text-container.text-3xl.text-gray-700
+          .text-container.text-2xl.text-gray-700
             {{title}}
           .line.flex-grow.mr-2.ml-6
             .h-0.border.border-gray-200
         .flex.mt-8
           .flex-grow.-mx-5.-mt-6(style="float:left;height:30em;margin-bottom:-30em; background: rgb(247,247,247); background: linear-gradient(0deg, rgba(247,247,247,1) 0%, rgba(255,255,255,1) 50%);")
+
+    -block subtitle
 
 -block alert-messages
   -if user_org.is_suspended
