--- a/templates/contacts/contact_blocked_spa.haml
+++ b/templates/contacts/contact_blocked_spa.haml
@@ -2,5 +2,5 @@
 -load i18n
 
 -block subtitle
-  .text-base.mt-1
+  .text-base.mb-6
     -trans "All inbound messages from these contacts are ignored. They have also been removed from all groups."
