--- a/templates/contacts/contact_list.haml
+++ b/templates/contacts/contact_list.haml
@@ -222,7 +222,7 @@
               .shadow.rounded-lg
                 -include "contacts/contact_list_include.haml"
 
-              .flex.flex-col(class="{%if not is_spa%}mb-16{%endif%}")
+              .flex.flex-col(class="{%if not is_spa%}mb-16 mt-3{%endif%}")
                 -include "includes/pagination.haml"
 
                 -if paginator.is_es_search and not page_obj.has_next_page and page_obj.number == paginator.num_pages and paginator.count > 10000
