--- a/templates/flows/flow_list_spa.haml
+++ b/templates/flows/flow_list_spa.haml
@@ -12,75 +12,75 @@
     %temba-modax#export-results{ header:'{% trans "Download Results" %}' }
     %temba-modax#create-label-modal{ header:'{% trans "Create Label" %}', endpoint:"{% url 'flows.flowlabel_create' %}", "-temba-loaded": "handleCreateLabelModalLoaded", "-temba-submitted": "handleCreateLabelModalSubmitted"}
 
-    -if org_has_flows
-      -if view.search_fields
-        %form#search-form.mb-4(method="get")
-          %temba-textinput(type='text' placeholder='{% trans "Search" %}' name="search" value="{{search}}")
-          -if request.REQUEST.status
-            %input(type='hidden' name='status' value='{{request.REQUEST.status}}')
+  -if org_has_flows
+    -if view.search_fields
+      %form#search-form.mb-4(method="get")
+        %temba-textinput(type='text' placeholder='{% trans "Search" %}' name="search" value="{{search}}")
+        -if request.REQUEST.status
+          %input(type='hidden' name='status' value='{{request.REQUEST.status}}')
 
-      -block flow-list
-        .mt-4.shadow.rounded-lg.overflow-y-auto
-          %table.list.lined.selectable
-            -if object_list
-              %thead
-                %tr
-                  -if org_perms.flows.flow_update
-                    %th
+    -block flow-list
+      .shadow.rounded-lg.overflow-y-auto
+        %table.list.lined.selectable
+          -if object_list
+            %thead
+              %tr
+                -if org_perms.flows.flow_update
                   %th
-                  %th
-                  %th.whitespace-nowrap
-                    Runs / Completion
+                %th
+                %th
+                %th.whitespace-nowrap
+                  Runs / Completion
 
-            %tbody
-              -for object in object_list
-                %tr.object-row.select-row{ data-uuid: "{{object.uuid}}", data-id: "{{ object.id }}",  onclick:'handleRowClicked(event)', href:"{% url 'flows.flow_editor' object.uuid%}"}
+          %tbody
+            -for object in object_list
+              %tr.object-row.select-row{ data-uuid: "{{object.uuid}}", data-id: "{{ object.id }}",  onclick:'handleRowClicked(event)', href:"{% url 'flows.flow_editor' object.uuid%}"}
 
-                  -if org_perms.flows.flow_update
-                    %td.checkbox.object-row-checkbox
-                      %temba-checkbox{onclick:"handleRowSelection(this)"}
+                -if org_perms.flows.flow_update
+                  %td.checkbox.object-row-checkbox
+                    %temba-checkbox{onclick:"handleRowSelection(this)"}
 
-                  %td.w-full
-                    .flex.flex-wrap.flex-end
-                      .flex.inline.whitespace-nowrap
-                        -if object.flow_type == 'V'
-                          .icon-phone.mr-2.leading-snug
-                        -elif object.flow_type == 'S'
-                          .icon-mobile.mr-2.leading-snug
-                        .name.whitespace-normal
-                          {{ object.name }}
+                %td.w-full
+                  .flex.flex-wrap.flex-end
+                    .flex.inline.whitespace-nowrap
+                      -if object.flow_type == 'V'
+                        .icon-phone.mr-2.leading-snug
+                      -elif object.flow_type == 'S'
+                        .icon-mobile.mr-2.leading-snug
+                      .name.whitespace-normal
+                        {{ object.name }}
 
-                  %td
-                    .whitespace-no-break.flex.items-center.ml-2.justify-end
-                      -for label in object.labels.all
-                        .lbl.linked.ml-2{ onclick:"goto(event)", data-id: '{{label.uuid}}', href:"{% url 'flows.flow_filter' label.uuid%}"}
-                          {{label.name}}
+                %td
+                  .whitespace-no-break.flex.items-center.ml-2.justify-end
+                    -for label in object.labels.all
+                      .lbl.linked.ml-2{ onclick:"goto(event)", data-id: '{{label.uuid}}', href:"{% url 'flows.flow_filter' label.uuid%}"}
+                        {{label.name}}
 
-                  %td
-                    -if not object.is_archived
-                      .whitespace-no-break.flex.items-center.justify-end
-                        -if object.has_issues
-                          .icon-warning.mr-2(title='{{ _("Has issues")|escapejs }}')
+                %td
+                  -if not object.is_archived
+                    .whitespace-no-break.flex.items-center.justify-end
+                      -if object.has_issues
+                        .icon-warning.mr-2(title='{{ _("Has issues")|escapejs }}')
 
-                        -if object.run_stats.total
-                          .linked.mr-2.whitespace-nowrap(onclick="goto(event)" href='{% url "flows.flow_results" object.uuid %}')
-                            {{ object.run_stats.total|intcomma }}
+                      -if object.run_stats.total
+                        .linked.mr-2.whitespace-nowrap(onclick="goto(event)" href='{% url "flows.flow_results" object.uuid %}')
+                          {{ object.run_stats.total|intcomma }}
 
-                          \/
-                          .text-center.linked.mx-2.whitespace-nowrap(onclick="goto(event)" href='{% url "flows.flow_results" object.uuid %}')
-                            {{ object.run_stats.completion }}%
+                        \/
+                        .text-center.linked.mx-2.whitespace-nowrap(onclick="goto(event)" href='{% url "flows.flow_results" object.uuid %}')
+                          {{ object.run_stats.completion }}%
 
-              -empty
-                %tr.empty_list
-                  %td(colspan='99')
-                    -trans "No matching flows."
+            -empty
+              %tr.empty_list
+                %td(colspan='99')
+                  -trans "No matching flows."
 
-        -block paginator
-          .mr-24
-            -include "includes/pagination.haml"
+      -block paginator
+        .mr-24
+          -include "includes/pagination.haml"
 
-      -else
-        -include "flows/empty_include.html"
+    -else
+      -include "flows/empty_include.html"
 
 -block extra-script
   {{ block.super }}
