--- a/templates/spa_frame.haml
+++ b/templates/spa_frame.haml
@@ -19,6 +19,10 @@
   {{block.super}}
 
   :css
+    .shadow {
+      --tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 40px 0 rgba(0, 0, 0, 0.09);
+    }
+
     html {
       --color-text-dark: #555;
       --temba-textinput-font-size: 1.125rem;
@@ -36,7 +40,7 @@
     }
 
     temba-button {
-      --button-shadow: rgba(0, 0, 0, 0.15) 0px 3px 14px 0px, rgba(0, 0, 0, 0.25) 0px 1px 2px 0px;
+      --button-shadow: 0 0px 0px 1px rgba(0, 0, 0, 0.02), 0 1px 9px 0 rgba(0, 0, 0, 0.2);
     }
 
     temba-button.light {
@@ -268,8 +272,6 @@
       padding: 18px;
       
     }
-
-
 }
 
      
@@ -279,6 +281,7 @@
 
   :javascript
 
+    var static_url = "{{STATIC_URL}}";
     var pendingRequests = [];
     function fetchAjax(url, container, options) {
 
@@ -459,7 +462,16 @@
       var selection = window.location.pathname.split("/").filter(function(path){ return !!path});
       var menu = document.querySelector("temba-menu");
       menu.setSelection(selection);
+
+      menu.addEventListener("temba-button-clicked", function(event) {
+        showModax(event.detail.title, event.detail.href);
+      });
+  
+      window.addEventListener('resize', function() {
+        // menu.collapsed = !!window.matchMedia("(max-width: 800px)").matches
+      });
     });
+
 
     document.addEventListener("temba-pjax-complete", function() {
       hideLoading();
@@ -512,8 +524,6 @@
             "onSuccess": hideLoading,  
         });
       } else {
-
-        console.log("POSTING", window.lastFetch);
         evt.stopPropagation();
         evt.preventDefault();
         var formData = new FormData(formEle);
@@ -641,7 +651,7 @@
       });
     }
 
-    var toMap = /(msg|contact|flow|ticket|channels|org|user).*/;
+    var toMap = /(msg|contact|flow|ticket|channels|triggers|campaign|org|user).*/;
 
     function handleNoPath(event) {
       var details = event.detail;
@@ -698,6 +708,14 @@
       }
     }
 
+    function showModax(header, endpoint) {
+      const modax = document.querySelector("temba-modax#shared-modax");
+      modax.header = header;
+      modax.endpoint = endpoint;
+      modax.headers = { "TEMBA-SPA": 1}
+      modax.open = true;
+    }
+
 
 -block refresh-fn
   :javascript
@@ -721,6 +739,7 @@
       
 -block page-container
 
+  %temba-modax#shared-modax
   .ajax-scripts
 
   .flex-col
