--- a/templates/triggers/trigger_update.haml
+++ b/templates/triggers/trigger_update.haml
@@ -3,6 +3,7 @@
 
 -block fields
   %script{src:"{{ STATIC_URL }}js/temba.js"}
+  %script{src:"{{ STATIC_URL }}js/flow-parameters.js"}
   %script{src:"{{ STATIC_URL }}js/trigger-common.js"}
 
   -if object.schedule
@@ -13,16 +14,18 @@
         cursor:pointer;
       }
 
-    #trigger_flow
+    #trigger-flow
       -render_field 'flow'
-    #trigger_omnibox
-      -render_field 'omnibox'
+    #trigger-groups
+      -render_field 'groups'
+    #trigger-exclude_groups
+      -render_field 'exclude_groups'
     #schedule-options
       -render_field 'start_datetime'
     #recurrence{class:'{% if not object.schedule.next_fire %}hidden{%endif%}'}
       .repeat-period
         -render_field 'repeat_period'
-      .weekly-repeat-options{class:'{% if form.repeat_period.value == "W" %}{% else%}hidden{%endif%}'}
+      .repeat-days-container{class:'{% if form.repeat_period.value == "W" %}{% else%}hidden{%endif%}'}
         -render_field 'repeat_days_of_week'
   -else
     {{block.super}}
@@ -98,15 +101,14 @@
       lockScheduleDate(body);
       var repeatPeriod = body.querySelector("#id_repeat_period");
       var repeatDays = body.querySelector(".repeat-days-container");
-        repeatPeriod.addEventListener("change", function(event){
-          var currentRepeat = event.currentTarget.values[0].value;
-          if (currentRepeat === 'W') {
-            repeatDays.classList.remove("hidden");
-          } else {
-            repeatDays.classList.add("hidden");
-          }
-        });
-      }
+      repeatPeriod.addEventListener("change", function(event) {
+        var currentRepeat = event.currentTarget.values[0].value;
+        if (currentRepeat === 'W') {
+          repeatDays.classList.remove("hidden");
+        } else {
+          repeatDays.classList.add("hidden");
+        }
+      });
 
       var flowField = body.querySelector("#id_flow");
       flowField.addEventListener('change', function (event) {
