--- a/templates/channels/types/facebookapp/refresh_token.haml
+++ b/templates/channels/types/facebookapp/refresh_token.haml
@@ -23,9 +23,9 @@
       %input#fb-user-id(type="text" name="fb_user_id")
       %input#user-access-token(type="text" name="user_access_token")
 
-
--block extra-script
+-block fb-scripts
   {{ block.super }}
+  #fb-root
 
   :javascript
     window.fbAsyncInit = function() {
@@ -36,16 +36,12 @@
       });
     };
 
-    
-    (function(d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) return;
-      js = d.createElement(s); js.id = id;
-      js.src = "https://connect.facebook.net/en_US/sdk.js";
-      fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk/debug.js"></script>
 
+-block extra-script
+  {{ block.super }}
 
+  :javascript
     $(document).ready(function(){
       $(".connect-facebook").click(function(evt){
         FB.login(function(response) {
