--- a/templates/channels/types/facebookapp/refresh_token.haml
+++ b/templates/channels/types/facebookapp/refresh_token.haml
@@ -23,9 +23,8 @@
       %input#fb-user-id(type="text" name="fb_user_id")
       %input#user-access-token(type="text" name="user_access_token")
 
--block fb-scripts
+-block extra-script
   {{ block.super }}
-  #fb-root
 
   :javascript
     window.fbAsyncInit = function() {
@@ -36,10 +35,7 @@
       });
     };
 
-  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk/debug.js"></script>
-
--block extra-script
-  {{ block.super }}
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
 
   :javascript
     $(document).ready(function(){
